# mutaba3a

./: .env.example  .gitignore  CLAUDE.md  LICENSE.md  README.md  TODO.md  deploy.ps1  deploy.sh  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  playwright.config.ts  release.env.example  tsconfig.app.json  vite.config.ts  vitest.config.ts
.claude/: CHANGELOG.md  CI_CD.md  COMPONENT_REGISTRY.md  DECISIONS.md  PATTERNS.md  SYSTEM_OVERVIEW.md  TECH_DEBT.md  TEST_PLAN.md
.claude/designs/: expense-routing-ux-redesign.md  financial-planning.md  insights-reintegration.md  multi-profile-all-profiles.md  pnl-summary.md  recurring-expenses.md
.github/workflows/: build-windows.yml
dev-dist/: sw.js
dist-desktop/: index.html
dist-desktop/assets/: Badge-qzDJyl-k.css  ClientDetailPage-BTf3kxER.js  ClientDetailPage-Co7ER_7Z.js  ClientDetailPage-Dvd-Gyt5.js  ClientsPage-7yvse6cW.js  ClientsPage-CYQEEqJQ.js  ClientsPage-NGSzOaKI.js  CurrencySummaryPopup-C2gIFLeu.js  CurrencySummaryPopup-CGGE0F85.js  CurrencySummaryPopup-WuFvmqt9.js  DownloadPage-ADHIfBLO.js  (+73 more)
dist-web/: index.html  manifest.webmanifest  sw.js
e2e/: accessibility.spec.ts  navigation.spec.ts  settings.spec.ts  transaction.spec.ts
public/: _redirects
scripts/: patch-latest-json.sh
src/: index.css  main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/sync/: commands.rs  crypto.rs  discovery.rs  mod.rs  pairing.rs  persistence.rs  server.rs
(+832 files in other folders)
